# Unimcp

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.MD  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  Readme.md  configure_claude.py  docker-compose.yml  docker_test.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.bat  setup.sh  start_server.bat  start_server.sh  status.bat  status.sh  test_api_coverage.py  test_connection.py  test_unifi_client.py  uninstall.bat  uninstall.sh  update.bat  update.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: agentic-ci.yml  ci.yml  release.yml
.roo/: README.md  mcp.md
.roo/rules-docs-writer/: rules.md
docs/: 1_overview_project.md  2_installation_setup.md  3_configuration_guide.md  4_usage_guide.md  5_api_reference.md  6_docker_deployment.md  7_troubleshooting_guide.md  8_maintenance_updates.md  README.md  architecture.md  architecture_index.md  data_flow_architecture.md  integration_architecture.md  security_architecture.md
src/unifi_mcp/: __init__.py  client.py  models.py  resources.py  server.py  tools.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api_integration.py
tests/unit/: __init__.py  test_client.py  test_models.py
